# cmd/bryant/openapi.yaml
@@ -320,7 +320,29 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/Internal"
- 
+    patch:
+      operationId: editMatchScout
+      summary: Edit a match scout
+      tags:
+        - Match
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MatchScoutEdit"
+      responses:
+        "200":
+          description: OK
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/Internal"
+
 components:
   securitySchemes:
     BearerAuth:
@@ -509,6 +531,16 @@ components:
         - match_uuid
         - mode
         - submode
+    MatchScoutEdit:
+      type: object
+      properties:
+        match_uuid:
+          type: string
+          format: uuid
+        finished:
+          type: boolean
+      required:
+        - match_uuid
     MatchScout:
       type: object
       properties:
